# ComputerVisionToolkit

./: .gitignore  CMakeLists.txt  FindLibTorch.txt  FindOpenCV.txt  README.md  class_background_subtractor_e_f-members.html  class_background_subtractor_e_f.html  classcvt_1_1_g_u_i.html  classcvt_1_1_mask_r_c_n_n_object_detector.html  classcvt_1_1_metric_master-members.html  classcvt_1_1_metric_master.html  classcvt_1_1_n_n_detector-members.html  classcvt_1_1_n_n_detector.html  classcvt_1_1_object_n_n_detector-members.html  classcvt_1_1_object_n_n_detector.html  classcvt_1_1_open_c_v_player.html  classes.html  cvgui_8hpp_source.html  cvplayer_8hpp_source.html  dir_05fdb8fa62a79149bd0612957cd7dea7.html  dir_2ca07ea4d6a27d271c8cf69001ad7e5d.html  dir_42a8d4ea7076d7ff8ed6d594679e5f38.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5d4751ac9449d9432b9272458b114d36.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_6f9635d4fbfa321d4c00f29df5cd540c.html  dir_7e820a8d5bffdbc1a5052995b29263b0.html  dir_d2bb280e14c29bc5ff4f9a8c3fc62455.html  dir_e5ae34e82c1765857e41dd664a997afb.html  dir_f3ab40a94327e0762e6092829940d6e1.html  dir_f744d4f7dde25717d66839524264bf97.html  dir_f8e4920cb70dfea6fde5789992405195.html  files.html  functions_eval.html  functions_vars.html  hierarchy.html  md__f___projects__computer_vision_toolkit__r_e_a_d_m_e.html  menudata.js  metrics_8hpp_source.html  nndetector_8hpp_source.html  (+4 more)
cmake/: FindLibTorch.txt  FindOnnxRuntime.cmake
doc/: Doxyfile
doc/html/: annotated.html  classcvt_1_1_g_u_i-members.html  classcvt_1_1_mask_r_c_n_n_object_detector-members.html  classcvt_1_1_mask_r_c_n_n_object_detector.html  classcvt_1_1_metric_master.html  classcvt_1_1_n_n_detector.html  classcvt_1_1_open_c_v_player-members.html  cvgui_8hpp_source.html  cvplayer_8hpp_source.html  dir_05fdb8fa62a79149bd0612957cd7dea7.html  dir_2ca07ea4d6a27d271c8cf69001ad7e5d.html  dir_42a8d4ea7076d7ff8ed6d594679e5f38.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_7e820a8d5bffdbc1a5052995b29263b0.html  dir_850a063262b5cd3432e0d761bdbf9f38.html  dir_9df1556c2d292349988c4b2df3a537e2.html  dir_d2bb280e14c29bc5ff4f9a8c3fc62455.html  dir_dae9317c3bf4c41ecc8b4c05adea86c8.html  dir_f3ab40a94327e0762e6092829940d6e1.html  dir_f744d4f7dde25717d66839524264bf97.html  dir_f8e4920cb70dfea6fde5789992405195.html  dir_fe159c7b2db516df96539067f6c89333.html  functions.html  functions_enum.html  functions_func.html  index.html  md__r_e_a_d_m_e.html  metrics_8hpp_source.html  nndetector_8hpp_source.html  pages.html  pod_8hpp_source.html  structcvt_1_1_infer_out-members.html  utils_8hpp_source.html
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  enumvalues_2.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  variables_0.js
lib.cvtoolkit/: CMakeLists.txt
lib.cvtoolkit/include/cvtoolkit/: cvgui.hpp  cvplayer.hpp  detector.hpp  detector_manager.hpp  image.hpp  json.hpp  logger.hpp  metrics.hpp  nndetector.hpp  pod.hpp  settings.hpp  trigger.hpp  types.hpp  utils.hpp
lib.cvtoolkit/include/cvtoolkit/detector/: optflow_motion_detector.hpp  yolo_object_detector.hpp
lib.cvtoolkit/include/cvtoolkit/math/: gaussian_estimator.hpp  poisson_estimator.hpp
lib.cvtoolkit/include/cvtoolkit/nn/: efficientnet.hpp  inception.hpp  maskrcnn.hpp  nn.hpp  utils.hpp
lib.cvtoolkit/lib.cvtoolkit.tests/: CMakeLists.txt  cvtoolkit_unittests.cpp  cvtoolkit_unittests.json
lib.cvtoolkit/src/: cvgui.cpp  cvplayer.cpp  detector.cpp  detector_manager.cpp  json.cpp  logger.cpp  nndetector.cpp  settings.cpp  utils.cpp
lib.cvtoolkit/src/cvplayer/: cvgui.cpp
lib.cvtoolkit/src/detector/: optflow_motion_detector.cpp  yolo_object_detector.cpp
lib.cvtoolkit/src/nn/: efficientnet.cpp  inception.cpp  maskrcnn.cpp  nn.cpp
samples/: CMakeLists.txt
samples/Background-subtraction/: CMakeLists.txt  exp-forgetting.cpp  knn.cpp  mog2.cpp
samples/Custom-pipeline/: CMakeLists.txt  custom-pipeline.cpp  histogram-pipeline.cpp  json-histogram.json
samples/EfficientNet/: CMakeLists.txt  _experimental_efficientnet.cpp  _experimental_efficientnet_batch.cpp  efficientnet.cpp  settings.json
samples/Illumination-estimation/: CMakeLists.txt  README.md  _experimental.py  grey-edge.cpp  grey-world.cpp  illumination-estimation.cpp  illumination-estimation.json  settings.json
samples/Image-processing/: CMakeLists.txt  histogram.cpp  hsv-filter.cpp  laplacian.cpp  settings.json  smoothing.cpp
samples/Inception/: CMakeLists.txt  inception.cpp  inception.json
samples/Inception-image-classifier/: CMakeLists.txt  inception-image-classifier.cpp  inception-image-classifier.json
samples/JSON-parser/: CMakeLists.txt  json-sample.json  main.cpp
samples/Mask-RCNN/: CMakeLists.txt  main.cpp
samples/Monodepth/: CMakeLists.txt  README.md  dpt-monodepth.cpp  settings.json
samples/Motion-detector/: CMakeLists.txt  optflow-motion-detector.cpp  optflow-motion-detector.json  simple-motion-detector.cpp
samples/Movement-detector/: CMakeLists.txt  f-diff.cpp
samples/OpenCV-player/: CMakeLists.txt  main.cpp
samples/Optical-flow/: CMakeLists.txt  dis.cpp  fback.cpp  lk.cpp  lk_cuda.cpp  nvidia_hw_optflow_1_0.cpp  nvidia_hw_optflow_2_0.cpp
samples/Shadow-removal/: CMakeLists.txt  README.md  _experimental.py  settings.json  simple-shadow-removal.cpp
samples/YOLO-object-detector/: CMakeLists.txt  yolo-object-detector.cpp  yolo-object-detector.json
samples/___Sample-template___/: CMakeLists.txt  sample-template.cpp  sample-template.json
search/: all_0.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js
